--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -4,7 +4,26 @@
       <ion-title>Menu Content</ion-title>
     </ion-toolbar>
   </ion-header>
-  <ion-content class="ion-padding">This is the menu content.</ion-content>
+  <ion-content class="ion-padding">This is the menu content.
+    <ion-list lines="none">
+      <ion-menu-toggle auto-hide="false">
+        <ion-item detail="false"  routerLink="/category">
+          <ion-label>
+            <ion-text color="primary">
+              Category
+            </ion-text>
+          </ion-label>
+        </ion-item>
+        <ion-item detail="false"  routerLink="/product">
+          <ion-label>
+            <ion-text color="primary">
+              Product
+            </ion-text>
+          </ion-label>
+        </ion-item>
+      </ion-menu-toggle>
+    </ion-list>
+  </ion-content>
 </ion-menu>
 <div class="ion-page" id="main-content">
 
