--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -21,6 +21,14 @@
             </ion-text>
           </ion-label>
         </ion-item>
+        
+        <ion-item detail="false"  [routerLink]="accountProductsUrl">
+          <ion-label>
+            <ion-text color="primary">
+              Product List
+            </ion-text>
+          </ion-label>
+        </ion-item>
       </ion-menu-toggle>
     </ion-list>
   </ion-content>
