--- a/src/app/modals/multi-selection-search/multi-selection-search.component.html
+++ b/src/app/modals/multi-selection-search/multi-selection-search.component.html
@@ -1,24 +1,38 @@
 <ion-header>
   <ion-toolbar>
+
     <ion-buttons slot="start">
-      <ion-button (click)="cancelChanges()">Cancel</ion-button>
+      <ion-button [disabled]="workingSelectedValues.length===0" (click)="confirmChanges()">{{'single_selection_searchbox.additem' | translate}}</ion-button>
     </ion-buttons>
-    <ion-title>{{ title }}</ion-title>
+
+    <ion-title class="ion-text-center">{{title}}</ion-title>
+  
     <ion-buttons slot="end">
-      <ion-button (click)="confirmChanges()">Done</ion-button>
+      <ion-button (click)="cancelChanges()">{{ 'single_selection_searchbox.cancel' | translate }}</ion-button>
     </ion-buttons>
+ 
   </ion-toolbar>
   <ion-toolbar>
-    <ion-searchbar (ionInput)="searchbarInput($event)"></ion-searchbar>
+    <ion-searchbar #inputSearch [debounce]="500" placeholder="{{ 'app.search' | translate }}"  (ionInput)="searchbarInput($event)"></ion-searchbar>
   </ion-toolbar>
 </ion-header>
 
 <ion-content color="light" class="ion-padding">
   <ion-list id="modal-list" [inset]="true">
-    <ion-item *ngFor="let item of filteredItems; trackBy: trackItems">
+    <ion-item *ngFor="let item of items; trackBy: trackItems" [disabled]="item?.exists">
+      <ion-avatar slot="start">
+        <img [src]="apiServer + item?.icon" />
+      </ion-avatar>
+     
       <ion-checkbox [value]="item.value" [checked]="isChecked(item.value)" (ionChange)="checkboxChange($event)"
-        >{{ item.text }}</ion-checkbox
-      >
+        >{{ item.text }}
+
+        @if(item?.exists){
+          <ion-text  color="danger"><small> --- </small><small>{{'accountproduct.addnotallow' | translate}}</small></ion-text>
+        }
+      
+      </ion-checkbox>
+       
     </ion-item>
   </ion-list>
 </ion-content>
