--- a/src/app/components/offer/offer-details/offer-details.component.html
+++ b/src/app/components/offer/offer-details/offer-details.component.html
@@ -1,3 +1,37 @@
-<p>
-  offer-details works!
-</p>
+
+
+
+<ion-card class="one-margin-padding" >
+  <ion-card-content >
+    <ion-grid >
+      <ion-row   class="ion-justify-content-center" >
+        <ion-col size="12"> 
+          <div class="row-center-img">
+            <img class="img-product" alt="Silhouette of mountains" src="https://ionicframework.com/docs/img/demos/card-media.png" />
+            <span class="product-discount">
+              3% off
+            </span>
+          </div>
+        </ion-col>
+      </ion-row>
+      <ion-row   class="ion-justify-content-center" >
+        <ion-col size="12"> 
+          <p class="ion-col-center"> this is product name and we can describe this product by explain components and enter helper material </p>
+        </ion-col>
+      </ion-row>   
+      <ion-row   class="ion-justify-content-around" >
+        <ion-col size="5"> 
+          <p class="ion-col-center price-ignore"> 25589.25 LE </p>
+        </ion-col>
+        <ion-col size="5"> 
+          <p class="ion-col-center"> 25033.25 LE </p>
+        </ion-col>
+      </ion-row>   
+      <ion-row   class="ion-justify-content-center" >
+        <ion-col size="12"> 
+          <ion-button fill="outline"> Add to card </ion-button>
+        </ion-col>
+      </ion-row>  
+    </ion-grid>
+  </ion-card-content>
+</ion-card>
