--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -29,6 +29,15 @@
             </ion-text>
           </ion-label>
         </ion-item>
+
+        <ion-item detail="false"  [routerLink]="accountOfferUrl">
+          <ion-label>
+            <ion-text color="primary">
+              Offer List
+            </ion-text>
+          </ion-label>
+        </ion-item>
+
       </ion-menu-toggle>
     </ion-list>
   </ion-content>
