--- a/src/app/components/account-product/account-product.component.html
+++ b/src/app/components/account-product/account-product.component.html
@@ -33,6 +33,7 @@
               <ion-col>
                 <div class="ion-text-start">
                   <ion-input
+                    type="number"
                     label-placement="floating" 
                     label="{{'product.firstprice' | translate}}"
                     [(ngModel)]="product.first_price"
@@ -73,6 +74,7 @@
           <ion-col>
             <div class="ion-text-start">
               <ion-input
+                type="number"
                 label-placement="floating" 
                 label="{{'product.secondprice' | translate}}"
                 [(ngModel)]="product.second_price"
